compiler/PythonParser.py
# Generated from PythonParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'**'", "'/'", "'//'", 
                     "'%'", "'@'", "'&'", "'|'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'^'", "'~'", "'+='", "'-='", 
                     "'*='", "'**='", "'/='", "'%='", "'='", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "':'", "','", "'.'", "';'", 
                     "'False'", "'None'", "'True'", "'and'", "'as'", "'assert'", 
                     "'break'", "'class'", "'continue'", "'def'", "'del'", 
                     "'elif'", "'else'", "'except'", "'finally'", "'for'", 
                     "'from'", "'global'", "'if'", "'import'", "'in'", "'is'", 
                     "'lambda'", "'nonlocal'", "'not'", "'or'", "'pass'", 
                     "'raise'", "'return'", "'try'", "'while'", "'with'", 
                     "'yield'", "'int'", "'float'", "'str'", "'bool'", "'list'", 
                     "'tuple'", "'dict'", "'set'", "'print'", "'input'", 
                     "'len'", "'type'", "'range'", "'open'", "'help'", "'sum'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "MINUS", "MULTIPLY", "DOUBLE_STAR", 
                      "DIVISION", "DOUBLE_SLASH", "MODULUS", "AT", "AMPERSAND", 
                      "PIPE", "EQ_EQUAL", "NOT_EQUAL", "GREATER", "LESS", 
                      "GREATER_EQUAL", "LESS_EQUAL", "XOR", "TILDE", "PLUS_EQUAL", 
                      "MINUS_EQUAL", "MULTIPLY_EQUAL", "DOUBLE_STAR_EQUAL", 
                      "DIVISION_EQUAL", "MODULUS_EQUAL", "EQUALS", "LPAREN", 
                      "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
                      "COLON", "COMMA", "DOT", "SEMI", "FALSE", "NONE", 
                      "TRUE", "AND", "AS", "ASSERT", "BREAK", "CLASS", "CONTINUE", 
                      "DEF", "DEL", "ELIF", "ELSE", "EXCEPT", "FINALLY", 
                      "FOR", "FROM", "GLOBAL", "IF", "IMPORT", "IN", "IS", 
                      "LAMBDA", "NONLOCAL", "NOT", "OR", "PASS", "RAISE", 
                      "RETURN", "TRY", "WHILE", "WITH", "YIELD", "INT_TYPE", 
                      "FLOAT_TYPE", "STR_TYPE", "BOOL_TYPE", "LIST_TYPE", 
                      "TUPLE_TYPE", "DICT_TYPE", "SET_TYPE", "PRINT", "INPUT", 
                      "LEN", "TYPE", "RANGE", "OPEN", "HELP", "SUM", "FLOAT", 
                      "STRING", "COMMENT", "NEWLINE", "ID", "DIGIT", "WS" ]

    RULE_code = 0
    RULE_stat = 1
    RULE_atribuicao = 2
    RULE_returnStmt = 3
    RULE_loop_while = 4
    RULE_loop_for = 5
    RULE_func = 6
    RULE_func_call = 7
    RULE_condicional = 8
    RULE_bloco = 9
    RULE_expr = 10
    RULE_lista = 11
    RULE_tupla = 12
    RULE_set_dados = 13
    RULE_dicionario = 14
    RULE_elemento_dict = 15
    RULE_query = 16

    ruleNames =  [ "code", "stat", "atribuicao", "returnStmt", "loop_while", 
                   "loop_for", "func", "func_call", "condicional", "bloco", 
                   "expr", "lista", "tupla", "set_dados", "dicionario", 
                   "elemento_dict", "query" ]

    EOF = Token.EOF
    PLUS=1
    MINUS=2
    MULTIPLY=3
    DOUBLE_STAR=4
    DIVISION=5
    DOUBLE_SLASH=6
    MODULUS=7
    AT=8
    AMPERSAND=9
    PIPE=10
    EQ_EQUAL=11
    NOT_EQUAL=12
    GREATER=13
    LESS=14
    GREATER_EQUAL=15
    LESS_EQUAL=16
    XOR=17
    TILDE=18
    PLUS_EQUAL=19
    MINUS_EQUAL=20
    MULTIPLY_EQUAL=21
    DOUBLE_STAR_EQUAL=22
    DIVISION_EQUAL=23
    MODULUS_EQUAL=24
    EQUALS=25
    LPAREN=26
    RPAREN=27
    LBRACK=28
    RBRACK=29
    LBRACE=30
    RBRACE=31
    COLON=32
    COMMA=33
    DOT=34
    SEMI=35
    FALSE=36
    NONE=37
    TRUE=38
    AND=39
    AS=40
    ASSERT=41
    BREAK=42
    CLASS=43
    CONTINUE=44
    DEF=45
    DEL=46
    ELIF=47
    ELSE=48
    EXCEPT=49
    FINALLY=50
    FOR=51
    FROM=52
    GLOBAL=53
    IF=54
    IMPORT=55
    IN=56
    IS=57
    LAMBDA=58
    NONLOCAL=59
    NOT=60
    OR=61
    PASS=62
    RAISE=63
    RETURN=64
    TRY=65
    WHILE=66
    WITH=67
    YIELD=68
    INT_TYPE=69
    FLOAT_TYPE=70
    STR_TYPE=71
    BOOL_TYPE=72
    LIST_TYPE=73
    TUPLE_TYPE=74
    DICT_TYPE=75
    SET_TYPE=76
    PRINT=77
    INPUT=78
    LEN=79
    TYPE=80
    RANGE=81
    OPEN=82
    HELP=83
    SUM=84
    FLOAT=85
    STRING=86
    COMMENT=87
    NEWLINE=88
    ID=89
    DIGIT=90
    WS=91

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def condicional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.CondicionalContext)
            else:
                return self.getTypedRuleContext(PythonParser.CondicionalContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.FuncContext)
            else:
                return self.getTypedRuleContext(PythonParser.FuncContext,i)


        def func_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Func_callContext)
            else:
                return self.getTypedRuleContext(PythonParser.Func_callContext,i)


        def loop_while(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Loop_whileContext)
            else:
                return self.getTypedRuleContext(PythonParser.Loop_whileContext,i)


        def loop_for(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Loop_forContext)
            else:
                return self.getTypedRuleContext(PythonParser.Loop_forContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def getRuleIndex(self):
            return PythonParser.RULE_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode" ):
                listener.enterCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode" ):
                listener.exitCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = PythonParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_code)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1173223232308772864) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 123740165) != 0):
                self.state = 41
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 34
                    self.stat()
                    pass

                elif la_ == 2:
                    self.state = 35
                    self.condicional()
                    pass

                elif la_ == 3:
                    self.state = 36
                    self.func()
                    pass

                elif la_ == 4:
                    self.state = 37
                    self.func_call()
                    pass

                elif la_ == 5:
                    self.state = 38
                    self.loop_while()
                    pass

                elif la_ == 6:
                    self.state = 39
                    self.loop_for()
                    pass

                elif la_ == 7:
                    self.state = 40
                    self.match(PythonParser.NEWLINE)
                    pass


                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(PythonParser.AtribuicaoContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(PythonParser.ReturnStmtContext,0)


        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = PythonParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 48
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 49
                self.query(0)
                pass

            elif la_ == 3:
                self.state = 50
                self.atribuicao()
                pass

            elif la_ == 4:
                self.state = 51
                self.returnStmt()
                pass


            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 54
                self.match(PythonParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUALS(self):
            return self.getToken(PythonParser.EQUALS, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def PRINT(self):
            return self.getToken(PythonParser.PRINT, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = PythonParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_atribuicao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            _la = self._input.LA(1)
            if not(_la==77 or _la==89):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 58
            self.match(PythonParser.EQUALS)
            self.state = 59
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PythonParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = PythonParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(PythonParser.RETURN)
            self.state = 62
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_whileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_loop_while

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EstruturaWhileContext(Loop_whileContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Loop_whileContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(PythonParser.WHILE, 0)
        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)
        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)
        def bloco(self):
            return self.getTypedRuleContext(PythonParser.BlocoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaWhile" ):
                listener.enterEstruturaWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaWhile" ):
                listener.exitEstruturaWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaWhile" ):
                return visitor.visitEstruturaWhile(self)
            else:
                return visitor.visitChildren(self)



    def loop_while(self):

        localctx = PythonParser.Loop_whileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_loop_while)
        try:
            localctx = PythonParser.EstruturaWhileContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(PythonParser.WHILE)
            self.state = 65
            self.query(0)
            self.state = 66
            self.match(PythonParser.COLON)
            self.state = 67
            self.match(PythonParser.NEWLINE)
            self.state = 68
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_forContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_loop_for

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EstruturaForContext(Loop_forContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Loop_forContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(PythonParser.FOR, 0)
        def ID(self):
            return self.getToken(PythonParser.ID, 0)
        def IN(self):
            return self.getToken(PythonParser.IN, 0)
        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)
        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)
        def bloco(self):
            return self.getTypedRuleContext(PythonParser.BlocoContext,0)

        def RANGE(self):
            return self.getToken(PythonParser.RANGE, 0)
        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)

        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)
        def COMMA(self):
            return self.getToken(PythonParser.COMMA, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaFor" ):
                listener.enterEstruturaFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaFor" ):
                listener.exitEstruturaFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaFor" ):
                return visitor.visitEstruturaFor(self)
            else:
                return visitor.visitChildren(self)



    def loop_for(self):

        localctx = PythonParser.Loop_forContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_loop_for)
        self._la = 0 # Token type
        try:
            localctx = PythonParser.EstruturaForContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(PythonParser.FOR)
            self.state = 71
            self.match(PythonParser.ID)
            self.state = 72
            self.match(PythonParser.IN)
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [81]:
                self.state = 73
                self.match(PythonParser.RANGE)
                self.state = 74
                self.match(PythonParser.LPAREN)
                self.state = 75
                self.expr(0)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==33:
                    self.state = 76
                    self.match(PythonParser.COMMA)
                    self.state = 77
                    self.expr(0)


                self.state = 80
                self.match(PythonParser.RPAREN)
                pass
            elif token in [26, 28, 30, 36, 38, 77, 85, 86, 89, 90]:
                self.state = 82
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 85
            self.match(PythonParser.COLON)
            self.state = 86
            self.match(PythonParser.NEWLINE)
            self.state = 87
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_func

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DefinicaoFuncaoContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DEF(self):
            return self.getToken(PythonParser.DEF, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ID)
            else:
                return self.getToken(PythonParser.ID, i)
        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)
        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)
        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)
        def bloco(self):
            return self.getTypedRuleContext(PythonParser.BlocoContext,0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicaoFuncao" ):
                listener.enterDefinicaoFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicaoFuncao" ):
                listener.exitDefinicaoFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicaoFuncao" ):
                return visitor.visitDefinicaoFuncao(self)
            else:
                return visitor.visitChildren(self)



    def func(self):

        localctx = PythonParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func)
        self._la = 0 # Token type
        try:
            localctx = PythonParser.DefinicaoFuncaoContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PythonParser.DEF)
            self.state = 90
            self.match(PythonParser.ID)
            self.state = 91
            self.match(PythonParser.LPAREN)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==89:
                self.state = 92
                self.match(PythonParser.ID)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==33:
                    self.state = 93
                    self.match(PythonParser.COMMA)
                    self.state = 94
                    self.match(PythonParser.ID)
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 102
            self.match(PythonParser.RPAREN)
            self.state = 103
            self.match(PythonParser.COLON)
            self.state = 104
            self.match(PythonParser.NEWLINE)
            self.state = 105
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_func_call

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ChamadaFuncaoContext(Func_callContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Func_callContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)
        def ID(self):
            return self.getToken(PythonParser.ID, 0)
        def PRINT(self):
            return self.getToken(PythonParser.PRINT, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChamadaFuncao" ):
                listener.enterChamadaFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChamadaFuncao" ):
                listener.exitChamadaFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChamadaFuncao" ):
                return visitor.visitChamadaFuncao(self)
            else:
                return visitor.visitChildren(self)



    def func_call(self):

        localctx = PythonParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            localctx = PythonParser.ChamadaFuncaoContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==77 or _la==89):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 108
            self.match(PythonParser.LPAREN)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 345006669824) != 0) or ((((_la - 77)) & ~0x3f) == 0 and ((1 << (_la - 77)) & 13057) != 0):
                self.state = 109
                self.expr(0)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==33:
                    self.state = 110
                    self.match(PythonParser.COMMA)
                    self.state = 111
                    self.expr(0)
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 119
            self.match(PythonParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_condicional

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EstruturaCondicionalContext(CondicionalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.CondicionalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(PythonParser.IF, 0)
        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.QueryContext)
            else:
                return self.getTypedRuleContext(PythonParser.QueryContext,i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COLON)
            else:
                return self.getToken(PythonParser.COLON, i)
        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)
        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.BlocoContext)
            else:
                return self.getTypedRuleContext(PythonParser.BlocoContext,i)

        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ELIF)
            else:
                return self.getToken(PythonParser.ELIF, i)
        def ELSE(self):
            return self.getToken(PythonParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaCondicional" ):
                listener.enterEstruturaCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaCondicional" ):
                listener.exitEstruturaCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaCondicional" ):
                return visitor.visitEstruturaCondicional(self)
            else:
                return visitor.visitChildren(self)



    def condicional(self):

        localctx = PythonParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condicional)
        try:
            localctx = PythonParser.EstruturaCondicionalContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(PythonParser.IF)
            self.state = 122
            self.query(0)
            self.state = 123
            self.match(PythonParser.COLON)
            self.state = 124
            self.match(PythonParser.NEWLINE)
            self.state = 125
            self.bloco()
            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 126
                    self.match(PythonParser.ELIF)
                    self.state = 127
                    self.query(0)
                    self.state = 128
                    self.match(PythonParser.COLON)
                    self.state = 129
                    self.match(PythonParser.NEWLINE)
                    self.state = 130
                    self.bloco() 
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
